a4/tests/SemanticErrors3.btm
class Main
{
     int main( boolean b )
     {
        return;
     }
}